# isotools

./: .pylintrc  BACKLOG.md  GEMINI.md  README.md  Water_18O_Report.html  Water_18O_Report.xlsx  Water_2H_Report.html  Water_2H_Report.xlsx  file_structure.md  pyproject.toml  replication_water.ipynb  requirements.txt  water_isotopes_example.ipynb
.github/workflows/: main.yml  pylint.yml
docs/: calibration_and_uncertainty.md  concepts_and_workflow.md  managing_standards.md
isotools/: __init__.py  config.py  core.py  standards.py
isotools/reporting/: html.py
isotools/reporting/templates/: single_isotope.html
isotools/strategies/: __init__.py  normalization.py
isotools/utils/: readers.py
tests/: test_core.py  test_drift.py  test_readers.py  test_report_parameters.py  test_reporting.py  test_strategies.py
