[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isotools"
version = "0.1.0"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.setuptools]
packages = ["isotools"]